--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <script type="text/javascript" src="phonegap.js"></script>
 </head>
 <body marginheight="0" marginwidth="0">
-<a href="www/story_html5.html" style="font-size:40px;">test</a><br><br>
-
-<script>
-alert(location.href);
-</script>
+<a href="www/story_html5.html" style="font-size:40px;">story_html5</a><br><br>
+<a href="www/story.html" style="font-size:40px;">story</a><br><br>
+<a href="www/index_lms_html5.html" style="font-size:40px;">index_lms_html5</a><br><br>
+<a href="www/index_lms.html" style="font-size:40px;">index-lms</a><br><br>
 </body>
 </html>
