--- a/www/story_flash.html
+++ b/www/story_flash.html
@@ -6,7 +6,7 @@
 <!-- Created using Storyline 360 - http://www.articulate.com  -->
 <!-- version: 3.8.13281.0 -->
 
-<title>ARena</title>
+<title>ARena V2</title>
 <style>
 	body, div, swf  { margin: 0px; }
 	.no-scroll { overflow: hidden; }
